Optimized ArrayList usage by replacing it with sequential lists when possible